--- a/examples/all/try.css
+++ b/examples/all/try.css
@@ -7,18 +7,13 @@ p.example{
   font-style  : italic;
   font-size   : 0.8em;
 }
-.inner_box{
-  background-color: #B22;
-  width     : 100%;
-  height    : 100%;
-  font-size : 1.5em;
-}
 .animation_box{
   margin          : 45px;
+  font-size : 1.5em;
   text-align      : center;
-  background-color: #123;
-  color           : white;//#123;
-  float           : left; 
+  background-color: #B22;
+  color           : white;
+  float           : left;
   margin-right    : 0.2em;
   width           : 400px;
   height          : 300px;
