--- a/examples/try/try.css
+++ b/examples/try/try.css
@@ -7,6 +7,7 @@ p.example{
   font-style  : italic;
   font-size   : 0.8em;
 }
+
 #animation_box{
   text-align      : center;
   font-size       : 3em;
@@ -14,9 +15,10 @@ p.example{
   padding-left    : 0.3em;
   padding-right    : 0.3em;
   background-color: #123;
-  color           : #123;
-  float           : left; 
+  color           : whitesmoke;
+  float           : left;
   margin-right    : 0.2em;
+  margin          : 10px;
 }
 
 #right{
