--- a/examples/all/try.css
+++ b/examples/all/try.css
@@ -9,13 +9,13 @@ p.example{
 }
 .animation_box{
   margin          : 45px;
-  font-size : 1.5em;
+  font-size       : 1.5em;
   text-align      : center;
   background-color: #B22;
   color           : white;
   float           : left;
   margin-right    : 0.2em;
-  width           : 400px;
+  width           : 100%;
   height          : 300px;
 }
 
